# Hashium

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  DEPLOY.md  DISCLAIMER.md  INSTALL.md  MINING.md  README.md  ROADMAP.md  SECURITY.md  SESSION_LOG.md  WHITEPAPER.md  devnet_2nodes.sh  docker-compose.yml  hashium.conf  rename_to_hashium.sh  run_ft.sh  run_p2p.sh  run_smoke.sh  vcpkg.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  security.yml
.tx/: config
backend/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json
ci/: lint_imagefile  test_imagefile  test_run_all.sh
cmake/: ccache.cmake  crc32c.cmake  hashium-build-config.h.in  introspection.cmake  leveldb.cmake  libmultiprocess.cmake  minisketch.cmake  secp256k1.cmake  windows-app.manifest.in
contrib/: README.md  filter-lcov.py  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md  toolchain.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  RELEASE_GUIDE.md  REST-interface.md  WHITEPAPER.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  consensus.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  (+29 more)
src/ipc/test/: CMakeLists.txt  ipc_test.capnp  ipc_test.cpp  ipc_test.h  ipc_test_types.h  ipc_tests.cpp
(+2028 files in other folders)
